fix svg on mobile

--- a/src/modules/CartPage/components/ProductCart/ProductCart.module.scss
+++ b/src/modules/CartPage/components/ProductCart/ProductCart.module.scss
@@ -70,10 +70,11 @@
   border: none;
   text-align: center;
   align-self: center;
-  height: 3.2rem;
-  width: 3.2rem;
+  height: 1.6rem;
+  width: 1.6rem;
 
   & svg{
+    margin-left: 1.6rem;
     min-width: 1.6rem;
   }
 
